Bug and Contrast fixes

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -118,5 +118,6 @@ li {
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
+  color: #e6e5e5;
 }
 
